--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
@@ -34,4 +35,4 @@
   "exclude": [
     "node_modules"
   ]
-} 
+}
