Update elsint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,11 +14,11 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "project": ["./tsconfig.json"],
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 11,
-    "project": "./tsconfig.json",
     "sourceType": "module"
   },
   "plugins": [
