--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.54.1"
   },
   "devDependencies": {
