--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@vercel/analytics": "^0.1.5",
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
